--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,7 @@ before_install:
   - gcloud config set compute/zone asia-southeast1-a
   - gcloud container clusters get-credentials multi-cluster
   - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
-  - docker build -t dayhunter/react-test -f /client/Dockerfile.dev ./client
+  - docker build -t dayhunter/react-test -f ./client/Dockerfile.dev ./client
 
 script:
   - docker run dayhunter/react-test npm test -- --coverage
